@@ -6,6 +6,7 @@ import org.junit.Test;
 
 import java.io.IOException;
 import java.util.Collections;
+import java.util.List;
 
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertTrue;
@@ -15,27 +16,39 @@ public class SingleShellMagicsTest {
     private SingleShellMagics singleShellMagics;
 
     @Before
-    public void setUp() {
+    public void setUp() throws IOException {
         singleShellMagics = new SingleShellMagics();
     }
 
     @After
     public void tearDown() {
-        singleShellMagics.close();
+        if (singleShellMagics != null) {
+            singleShellMagics.close();
+        }
     }
 
     @Test
-    public void testShell() throws IOException {
-        singleShellMagics.shell(Collections.emptyList(), "echo Hello, World!");
-        singleShellMagics.shell(Collections.emptyList(), "echo Variable Test");
+    public void testCommonShell() throws IOException, InterruptedException {
+        String result = singleShellMagics.commonshell(Collections.emptyList(), "echo Hello, World!");
+        assertNotNull(result);
+        result = singleShellMagics.commonshell(Collections.emptyList(), "echo Variable Test");
+        assertNotNull(result);
     }
 
     @Test
-    public void testShellWithVariables() throws IOException {
+    public void testCommonShellWithVariables() throws IOException, InterruptedException {
         String var1 = "Hello";
         String var2 = "World";
-        singleShellMagics.shell(Collections.emptyList(), "echo " + var1 + ", " + var2 + "!");
-        singleShellMagics.shell(Collections.emptyList(), "echo Testing " + var1 + " and " + var2);
+        String result = singleShellMagics.commonshell(Collections.emptyList(), "echo " + var1 + ", " + var2 + "!");
+        assertNotNull(result);
+        result = singleShellMagics.commonshell(Collections.emptyList(), "echo Testing " + var1 + " and " + var2);
+        assertNotNull(result);
+    }
+
+    @Test
+    public void testCommonShellCmd() throws IOException, InterruptedException {
+        String result = singleShellMagics.commonshellcmd(List.of("echo", "test"));
+        assertNotNull(result);
     }
 
 }
